--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "mongoose": "^5.10.10",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
     "sync-request": "^6.1.0"
   }
 }
